# pulse-messenger

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  PRODUCTION_PLAN.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: fix-appimage-media.sh
src/: App.tsx  i18n.ts  main.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src-tauri/src/models/: mod.rs
src-tauri/src/services/: call_audio.rs  encryption.rs  file_transfer.rs  group_chat.rs  key_exchange.rs  mod.rs  network.rs  protocol.rs  storage.rs
src/components/: ConnectionStatus.tsx  ErrorBoundary.tsx  Identicon.tsx  OfflineBanner.tsx  Sidebar.tsx  ThemeProvider.tsx  Toasts.tsx
src/components/call/: ActiveCallView.tsx  IncomingCallDialog.tsx  OutgoingCallView.tsx
src/components/chat/: ChatList.tsx  ChatView.tsx  FileMessage.tsx
src/components/contacts/: AddContactDialog.tsx  MyCodeDialog.tsx
src/components/group/: CreateGroupDialog.tsx  GroupSettingsPanel.tsx
src/components/search/: SearchPanel.tsx
src/hooks/: useIsMobile.ts
src/locales/: en.json  ru.json
src/pages/: ContactsPage.tsx  ProfileSetupPage.tsx  SettingsPage.tsx
src/services/: api.ts  notifications.ts  sounds.ts  updater.ts  voiceRecorder.ts  webrtc.ts
src/stores/: callStore.ts  chatStore.test.ts  chatStore.ts  contactsStore.ts  fileStore.ts  groupStore.ts  networkStore.ts  searchStore.ts  settingsStore.ts  toastStore.test.ts  toastStore.ts  userStore.ts
src/styles/: globals.css
src/types/: index.ts
