[package]
name = "pulse-messenger"
version = "1.0.0"
description = "Pulse — P2P мессенджер с E2E шифрованием"
authors = ["Pulse Team"]
license = "MIT"
repository = "https://github.com/pulse-messenger/pulse"
edition = "2021"

[lib]
name = "pulse_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk = "2.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.15.1"

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-notification = "2"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
log = "0.4"
env_logger = "0.11"

# Encryption
ed25519-dalek = { version = "2", features = ["serde", "rand_core"] }
chacha20poly1305 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
hkdf = "0.12"
sha2 = "0.10"
rand = "0.8"

# Secure key storage (OS keyring: Secret Service on Linux, Keystore on Android)
keyring = "3"

# Storage
rusqlite = { version = "0.31", features = ["bundled"] }
bincode = "1"
dirs-next = "2"

# Image processing
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "webp"] }

# Networking
libp2p = { version = "0.54", features = ["tcp", "noise", "yamux", "mdns", "identify", "ping", "tokio", "request-response", "macros"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"
base64 = "0.22"
cpal = "0.18.1"
ringbuf = "0.5.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[dev-dependencies]
tempfile = "3"
